014G0159: add driver for roomthermostat, add proper icons for all devices (except roomthermostat) and (un)learnmode

--- a/app.json
+++ b/app.json
@@ -232,6 +232,20 @@
             "filter": "driver_id=MT2653"
           }
         ]
+      },
+      {
+        "id": "014G0159_btn_1",
+        "title": {
+          "en": "Button pressed",
+          "nl": "Knop ingedrukt"
+        },
+        "args": [
+          {
+            "name": "device",
+            "type": "device",
+            "filter": "driver_id=014G0159"
+          }
+        ]
       }
     ]
   },
@@ -252,6 +266,13 @@
           "instruction": {
             "en": "Activate inclusion on the device by pressing any one of the four buttons for one second.",
             "nl": "Om het apparaat toe te voegen, druk langer dan één seconde op één van de knoppen van de schakelaar."
+          }
+        },
+        "unlearnmode": {
+          "image": "/drivers/MT2652/assets/learnmode.svg",
+          "instruction": {
+            "en": "Activate exclusion on the device by pressing any one of the four buttons for one second.",
+            "nl": "Om het apparaat te verwijderen, druk langer dan één seconde op één van de knoppen van de schakelaar."
           }
         },
         "associationGroups": [
@@ -718,6 +739,13 @@
             "nl": "Druk op de middelste knop van de Devolo Radiatorthermostaat"
           }
         },
+        "unlearnmode": {
+          "image": "drivers/014G0801/assets/icon.svg",
+          "instruction": {
+            "en": "Press the middle button on your Devolo Radiator Thermostat",
+            "nl": "Druk op de middelste knop van de Devolo Radiatorthermostaat"
+          }
+        },
         "associationGroups": 1
       },
       "class": "thermostat",
@@ -753,9 +781,17 @@
           258
         ],
         "learnmode": {
+          "image": "/drivers/MT2653/assets/learnmode.svg",
           "instruction": {
             "en": "When in factory default push button 1 shortly to start inclusion.",
             "nl": "Als de Keyfob in standaard fabrieksmodus staat, druk dan kort op knop 1 om het apparaat toe te voegen."
+          }
+        },
+        "unlearnmode": {
+          "image": "/drivers/MT2653/assets/learnmode.svg",
+          "instruction": {
+            "en": "When in factory default push button 1 shortly to start exclusion.",
+            "nl": "Als de Keyfob in standaard fabrieksmodus staat, druk dan kort op knop 1 om het apparaat te verwijderen."
           }
         },
         "associationGroups": [
@@ -1148,6 +1184,14 @@
         ],
         "wakeUpInterval": 3600,
         "learnmode": {
+          "image": "/drivers/MT2647/assets/learnmode.svg",
+          "instruction": {
+            "en": "Press the tamper button on the back of the Motion Sensor three times.",
+            "nl": "Druk drie keer op de knop achter op de Bewegingssensor."
+          }
+        },
+        "unlearnmode": {
+          "image": "/drivers/MT2647/assets/learnmode.svg",
           "instruction": {
             "en": "Press the tamper button on the back of the Motion Sensor three times.",
             "nl": "Druk drie keer op de knop achter op de Bewegingssensor."
@@ -1422,6 +1466,14 @@
           14
         ],
         "learnmode": {
+          "image": "/drivers/MT2648/assets/learnmode.svg",
+          "instruction": {
+            "en": "Press the tamper button on the back of the Door/Window Contact three times.",
+            "nl": "Druk drie keer op de knop achter op de Door/Window Contact."
+          }
+        },
+        "unlearnmode": {
+          "image": "/drivers/MT2648/assets/learnmode.svg",
           "instruction": {
             "en": "Press the tamper button on the back of the Door/Window Contact three times.",
             "nl": "Druk drie keer op de knop achter op de Door/Window Contact."
@@ -1600,9 +1652,17 @@
           17
         ],
         "learnmode": {
+          "image": "/drivers/MT2646/assets/learnmode.svg",
           "instruction": {
             "en": "Put the Metering Plug in a socket or press the button on the front of the device three times to start inclusion.",
             "nl": "Stop de Metering Plug in het stopcontact of druk drie keer op de knop aan de voorkant van het apparaat om het toevoegen te starten."
+          }
+        },
+        "unlearnmode": {
+          "image": "/drivers/MT2646/assets/learnmode.svg",
+          "instruction": {
+            "en": "Press the button on the front of the device three times to start exclusion.",
+            "nl": "Druk drie keer op de knop aan de voorkant van het apparaat om hem te verwijderen."
           }
         },
         "associationGroups": [
@@ -1748,6 +1808,54 @@
           }
         }
       ]
+    },
+    {
+      "id": "014G0159",
+      "class": "thermostat",
+      "name": {
+        "en": "Room Thermostat",
+        "nl": "Kamerthermostaat"
+      },
+      "capabilities": [
+        "measure_battery",
+        "target_temperature",
+        "measure_temperature"
+      ],
+      "images": {
+        "large": "/drivers/014G0159/assets/images/large.png",
+        "small": "/drivers/014G0159/assets/images/small.png"
+      },
+      "zwave": {
+        "manufacturerId": [
+          2
+        ],
+        "productTypeId": [
+          3
+        ],
+        "productId": [
+          32784
+        ],
+        "wakeUpInterval": 3600,
+        "learnmode": {
+          "image": "/drivers/014G0159/assets/learnmode.svg",
+          "instruction": {
+            "en": "Press the button on top of the Room Thermostat to start pairing.",
+            "nl": "Druk op de knop boven op de Kamerthermostaat om het apparaat toe te voegen."
+          }
+        },
+        "unlearnmode": {
+          "image": "/drivers/014G0159/assets/learnmode.svg",
+          "instruction": {
+            "en": "Press the button on top of the Room Thermostat to remove the device.",
+            "nl": "Druk op de knop boven op de Kamerthermostaat om het apparaat te verwijderen."
+          }
+        },
+        "zwaveAllianceProductId": 1063,
+        "imageRemotePath": "http://products.z-wavealliance.org/ProductImages/Index?productName=ZC08-14070002",
+        "associationGroups": [],
+        "associationGroupsOptions": {}
+      },
+      "settings": []
     }
   ]
 }
