--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "name": {
     "en": "Devolo"
   },
-  "version": "1.0.3",
+  "version": "1.1.0",
   "compatibility": ">=1.0.2",
   "description": {
     "en": "Devolo Home Control z-wave devices for Homey",
@@ -20,8 +20,8 @@
     "small": "/assets/images/small.png"
   },
   "author": {
-    "name": "Bram Oosterhuis",
-    "email": "bram.oosterhuis.nl@gmail.com"
+    "name": "Athom B.V.",
+    "email": "apps@athom.com"
   },
   "contributors": {
     "developers": [
