--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "name": {
     "en": "Devolo"
   },
-  "version": "1.1.2",
+  "version": "1.1.3",
   "compatibility": ">=1.0.2",
   "description": {
     "en": "Devolo Home Control z-wave devices for Homey",
@@ -38,58 +38,91 @@
   "flow": {
     "triggers": [
       {
-        "id": "mt2652_btn1_single",
+        "id": "mt2652_scene",
         "title": {
-          "en": "Button 1 single press",
-          "nl": "Een keer gedrukt op knop 1"
+          "en": "Scene is activated",
+          "nl": "Scene is geactiveerd"
         },
         "args": [
           {
             "name": "device",
             "type": "device",
             "filter": "driver_id=MT2652"
-          }
-        ]
-      },
-      {
-        "id": "mt2652_btn2_single",
-        "title": {
-          "en": "Button 2 single press",
-          "nl": "Een keer gedrukt op knop 2"
-        },
-        "args": [
+          },
           {
-            "name": "device",
-            "type": "device",
-            "filter": "driver_id=MT2652"
-          }
-        ]
-      },
-      {
-        "id": "mt2652_btn3_single",
-        "title": {
-          "en": "Button 3 single press",
-          "nl": "Een keer gedrukt op knop 3"
-        },
-        "args": [
+            "name": "button",
+            "type": "dropdown",
+            "values": [
+              {
+                "id": "1",
+                "label": {
+                  "en": "Top left",
+                  "nl": "Links boven"
+                }
+              },
+              {
+                "id": "2",
+                "label": {
+                  "en": "Top right",
+                  "nl": "Rechts boven"
+                }
+              },
+              {
+                "id": "3",
+                "label": {
+                  "en": "Bottom left",
+                  "nl": "Links onder"
+                }
+              },
+              {
+                "id": "4",
+                "label": {
+                  "en": "Bottom right",
+                  "nl": "Rechts onder"
+                }
+              }
+            ]
+          },
           {
-            "name": "device",
-            "type": "device",
-            "filter": "driver_id=MT2652"
-          }
-        ]
-      },
-      {
-        "id": "mt2652_btn4_single",
-        "title": {
-          "en": "Button 4 single press",
-          "nl": "Een keer gedrukt op knop 4"
-        },
-        "args": [
-          {
-            "name": "device",
-            "type": "device",
-            "filter": "driver_id=MT2652"
+            "name": "scene",
+            "type": "dropdown",
+            "values": [
+              {
+                "id": "Key Pressed 1 time",
+                "label": {
+                  "en": "Pressed 1x",
+                  "nl": "1x gedrukt"
+                }
+              },
+              {
+                "id": "Key Held Down",
+                "label": {
+                  "en": "Hold press (5x a second)",
+                  "nl": "Lang drukken (5x per seconde)"
+                }
+              },
+              {
+                "id": "Key Released",
+                "label": {
+                  "en": "Press released",
+                  "nl": "Drukken losgelaten"
+                }
+              },
+              {
+                "id": "Key Slide Up",
+                "label": {
+                  "en": "Slide Up",
+                  "nl": "Omhoog Schuiven"
+                }
+              },
+              {
+                "id": "Key Slide Down",
+                "label": {
+                  "en": "Slide Down",
+                  "nl": "Omlaag schuiven"
+                }
+              }
+            ]
           }
         ]
       },
@@ -557,9 +590,6 @@
           "label": {
             "en": "Send the following Switch All commands "
           },
-          "hint": {
-            "en": {}
-          },
           "values": [
             {
               "id": "1",
@@ -588,9 +618,6 @@
           "label": {
             "en": "Invert buttons"
           },
-          "hint": {
-            "en": {}
-          },
           "values": [
             {
               "id": "0",
@@ -613,9 +640,6 @@
           "label": {
             "en": "Blocks wakeup even when wakeup interval is set"
           },
-          "hint": {
-            "en": {}
-          },
           "values": [
             {
               "id": "0",
@@ -637,9 +661,6 @@
           "value": "0",
           "label": {
             "en": "Send unsolicited Battery Report on Wake Up"
-          },
-          "hint": {
-            "en": {}
           },
           "values": [
             {
@@ -690,7 +711,9 @@
             "nl": "Druk op de middelste knop van de Devolo Radiatorthermostaat"
           }
         },
-        "associationGroups": 1
+        "associationGroups": [
+          1
+        ]
       },
       "class": "thermostat",
       "capabilities": [
@@ -701,7 +724,8 @@
       "capabilitiesOptions": {
         "target_temperature": {
           "min": 4,
-          "max": 28
+          "max": 28,
+          "decimals": 1
         }
       },
       "images": {
@@ -715,9 +739,7 @@
         "en": "Home Control Keyfob"
       },
       "zwave": {
-        "manufacturerId": [
-          373
-        ],
+        "manufacturerId": 373,
         "productTypeId": [
           256
         ],
@@ -1116,9 +1138,7 @@
         "nl": "Bewegingsdetector"
       },
       "zwave": {
-        "manufacturerId": [
-          373
-        ],
+        "manufacturerId": 373,
         "productTypeId": [
           2,
           13
@@ -1400,9 +1420,7 @@
         "en": "Door/Window Contact"
       },
       "zwave": {
-        "manufacturerId": [
-          373
-        ],
+        "manufacturerId": 373,
         "productTypeId": [
           2
         ],
@@ -1586,9 +1604,7 @@
         "en": "Metering Plug"
       },
       "zwave": {
-        "manufacturerId": [
-          373
-        ],
+        "manufacturerId": 373,
         "productTypeId": [
           1
         ],
@@ -1765,14 +1781,17 @@
         "target_temperature",
         "measure_temperature"
       ],
+      "capabilitiesOptions": {
+        "target_temperature": {
+          "decimals": 1
+        }
+      },
       "images": {
         "large": "/drivers/014G0159/assets/images/large.png",
         "small": "/drivers/014G0159/assets/images/small.png"
       },
       "zwave": {
-        "manufacturerId": [
-          2
-        ],
+        "manufacturerId": 2,
         "productTypeId": [
           3
         ],
