--- a/app.json
+++ b/app.json
@@ -1,13 +1,14 @@
 {
   "id": "com.devolo",
+  "sdk": 2,
   "name": {
     "en": "Devolo"
   },
-  "version": "1.1.3",
-  "compatibility": ">=1.0.2",
+  "version": "1.2.0",
+  "compatibility": ">=1.5.6",
   "description": {
-    "en": "Devolo Home Control z-wave devices for Homey",
-    "nl": "Devolo Home Control z-wave devices voor Homey"
+    "en": "Devolo Home Control Z-Wave devices for Homey",
+    "nl": "Devolo Home Control Z-Wave devices voor Homey"
   },
   "category": [
     "appliances",
@@ -37,95 +38,6 @@
   },
   "flow": {
     "triggers": [
-      {
-        "id": "mt2652_scene",
-        "title": {
-          "en": "Scene is activated",
-          "nl": "Scene is geactiveerd"
-        },
-        "args": [
-          {
-            "name": "device",
-            "type": "device",
-            "filter": "driver_id=MT2652"
-          },
-          {
-            "name": "button",
-            "type": "dropdown",
-            "values": [
-              {
-                "id": "1",
-                "label": {
-                  "en": "Top left",
-                  "nl": "Links boven"
-                }
-              },
-              {
-                "id": "2",
-                "label": {
-                  "en": "Top right",
-                  "nl": "Rechts boven"
-                }
-              },
-              {
-                "id": "3",
-                "label": {
-                  "en": "Bottom left",
-                  "nl": "Links onder"
-                }
-              },
-              {
-                "id": "4",
-                "label": {
-                  "en": "Bottom right",
-                  "nl": "Rechts onder"
-                }
-              }
-            ]
-          },
-          {
-            "name": "scene",
-            "type": "dropdown",
-            "values": [
-              {
-                "id": "Key Pressed 1 time",
-                "label": {
-                  "en": "Pressed 1x",
-                  "nl": "1x gedrukt"
-                }
-              },
-              {
-                "id": "Key Held Down",
-                "label": {
-                  "en": "Hold press (5x a second)",
-                  "nl": "Lang drukken (5x per seconde)"
-                }
-              },
-              {
-                "id": "Key Released",
-                "label": {
-                  "en": "Press released",
-                  "nl": "Drukken losgelaten"
-                }
-              },
-              {
-                "id": "Key Slide Up",
-                "label": {
-                  "en": "Slide Up",
-                  "nl": "Omhoog Schuiven"
-                }
-              },
-              {
-                "id": "Key Slide Down",
-                "label": {
-                  "en": "Slide Down",
-                  "nl": "Omlaag schuiven"
-                }
-              }
-            ]
-          }
-        ]
-      },
       {
         "id": "mt2653_btn1_single",
         "title": {
@@ -227,465 +139,6 @@
     ]
   },
   "drivers": [
-    {
-      "id": "MT2652",
-      "name": {
-        "en": "Scene Switch",
-        "nl": "Intelligente Schakelaar"
-      },
-      "zwave": {
-        "manufacturerId": 373,
-        "productTypeId": 256,
-        "productId": 257,
-        "wakeUpInterval": 1800,
-        "learnmode": {
-          "image": "/drivers/MT2652/assets/learnmode.svg",
-          "instruction": {
-            "en": "Activate inclusion on the device by pressing any one of the four buttons for one second.",
-            "nl": "Om het apparaat toe te voegen, druk langer dan één seconde op één van de knoppen van de schakelaar."
-          }
-        },
-        "unlearnmode": {
-          "image": "/drivers/MT2652/assets/learnmode.svg",
-          "instruction": {
-            "en": "Activate exclusion on the device by putting the device in \"Management Mode\", afterwards press any one of the four buttons for one second.",
-            "nl": "Om het apparaat te verwijderen, zet het apparaat in \"Management Modus\",druk vervolgens langer dan één seconde op één van de knoppen van de schakelaar."
-          }
-        },
-        "associationGroups": [
-          1
-        ]
-      },
-      "class": "other",
-      "capabilities": [
-        "measure_battery"
-      ],
-      "images": {
-        "large": "/drivers/MT2652/assets/images/large.png",
-        "small": "/drivers/MT2652/assets/images/small.png"
-      },
-      "mobile": {
-        "components": [
-          {
-            "id": "icon"
-          },
-          {
-            "id": "battery",
-            "capabilities": [
-              "measure_battery"
-            ]
-          }
-        ]
-      },
-      "settings": [
-        {
-          "id": "1",
-          "value": "1",
-          "label": {
-            "en": "Button 1 and 3 pair mode"
-          },
-          "hint": {
-            "en": "In separate mode button 1 works with group A, button 3 with groups C. Click is On, Hold is dimming Up, Double click is Off, Click-Hold is dimming Down. In pair button 1/3 are Up/Down correspondingly. Click is On/Off, Hold is dimming Up/Down. Single clicks works with group A, double click with group C."
-          },
-          "values": [
-            {
-              "id": "0",
-              "label": {
-                "en": "seperately"
-              }
-            },
-            {
-              "id": "1",
-              "label": {
-                "en": "In pair without double clicks"
-              }
-            },
-            {
-              "id": "2",
-              "label": {
-                "en": "In pair with double clicks"
-              }
-            }
-          ],
-          "type": "dropdown"
-        },
-        {
-          "id": "11",
-          "value": "8",
-          "label": {
-            "en": "Command to Control Group A"
-          },
-          "hint": {
-            "en": "This parameter defines the command to be sent to devices of control group A when the related button is pressed"
-          },
-          "values": [
-            {
-              "id": "0",
-              "label": {
-                "en": "Disabled"
-              }
-            },
-            {
-              "id": "1",
-              "label": {
-                "en": "Switch On/Off and Dim (send Basic Set and Switch Multilevel)"
-              }
-            },
-            {
-              "id": "2",
-              "label": {
-                "en": "Switch On/Off only (send Basic Set)"
-              }
-            },
-            {
-              "id": "3",
-              "label": {
-                "en": "Switch All"
-              }
-            },
-            {
-              "id": "4",
-              "label": {
-                "en": "Send Scenes"
-              }
-            },
-            {
-              "id": "5",
-              "label": {
-                "en": "Send Preconfigured Scenes"
-              }
-            },
-            {
-              "id": "7",
-              "label": {
-                "en": "Control DoorLock"
-              }
-            },
-            {
-              "id": "8",
-              "label": {
-                "en": "Central Scene to Gateway "
-              }
-            }
-          ],
-          "type": "dropdown"
-        },
-        {
-          "id": "12",
-          "value": "8",
-          "label": {
-            "en": "Command to Control Group B"
-          },
-          "hint": {
-            "en": "This parameter defines the command to be sent to devices of control group B when the related button is pressed"
-          },
-          "values": [
-            {
-              "id": "0",
-              "label": {
-                "en": "Disabled"
-              }
-            },
-            {
-              "id": "1",
-              "label": {
-                "en": "Switch On/Off and Dim (send Basic Set and Switch Multilevel)"
-              }
-            },
-            {
-              "id": "2",
-              "label": {
-                "en": "Switch On/Off only (send Basic Set)"
-              }
-            },
-            {
-              "id": "3",
-              "label": {
-                "en": "Switch All"
-              }
-            },
-            {
-              "id": "4",
-              "label": {
-                "en": "Send Scenes"
-              }
-            },
-            {
-              "id": "5",
-              "label": {
-                "en": "Send Preconfigured Scenes"
-              }
-            },
-            {
-              "id": "7",
-              "label": {
-                "en": "Control DoorLock"
-              }
-            },
-            {
-              "id": "8",
-              "label": {
-                "en": "Central Scene to Gateway "
-              }
-            }
-          ],
-          "type": "dropdown"
-        },
-        {
-          "id": "13",
-          "value": "8",
-          "label": {
-            "en": "Command to Control Group C"
-          },
-          "hint": {
-            "en": "This parameter defines the command to be sent to devices of control group C when the related button is pressed"
-          },
-          "values": [
-            {
-              "id": "0",
-              "label": {
-                "en": "Disabled"
-              }
-            },
-            {
-              "id": "1",
-              "label": {
-                "en": "Switch On/Off and Dim (send Basic Set and Switch Multilevel)"
-              }
-            },
-            {
-              "id": "2",
-              "label": {
-                "en": "Switch On/Off only (send Basic Set)"
-              }
-            },
-            {
-              "id": "3",
-              "label": {
-                "en": "Switch All"
-              }
-            },
-            {
-              "id": "4",
-              "label": {
-                "en": "Send Scenes"
-              }
-            },
-            {
-              "id": "5",
-              "label": {
-                "en": "Send Preconfigured Scenes"
-              }
-            },
-            {
-              "id": "7",
-              "label": {
-                "en": "Control DoorLock"
-              }
-            },
-            {
-              "id": "8",
-              "label": {
-                "en": "Central Scene to Gateway "
-              }
-            }
-          ],
-          "type": "dropdown"
-        },
-        {
-          "id": "14",
-          "value": "8",
-          "label": {
-            "en": "Command to Control Group D"
-          },
-          "hint": {
-            "en": "This parameter defines the command to be sent to devices of control group D when the related button is pressed"
-          },
-          "values": [
-            {
-              "id": "0",
-              "label": {
-                "en": "Disabled"
-              }
-            },
-            {
-              "id": "1",
-              "label": {
-                "en": "Switch On/Off and Dim (send Basic Set and Switch Multilevel)"
-              }
-            },
-            {
-              "id": "2",
-              "label": {
-                "en": "Switch On/Off only (send Basic Set)"
-              }
-            },
-            {
-              "id": "3",
-              "label": {
-                "en": "Switch All"
-              }
-            },
-            {
-              "id": "4",
-              "label": {
-                "en": "Send Scenes"
-              }
-            },
-            {
-              "id": "5",
-              "label": {
-                "en": "Send Preconfigured Scenes"
-              }
-            },
-            {
-              "id": "7",
-              "label": {
-                "en": "Control DoorLock"
-              }
-            },
-            {
-              "id": "8",
-              "label": {
-                "en": "Central Scene to Gateway "
-              }
-            }
-          ],
-          "type": "dropdown"
-        },
-        {
-          "id": "2",
-          "value": "1",
-          "label": {
-            "en": "Button 2 and 4 pair mode "
-          },
-          "hint": {
-            "en": "In separate mode button 2 works with control group B, button 4 with control group D. Click is On, Hold is dimming Up, Double click is Off, Click-Hold is dimming Down. In pair button B/D are Up/Down correspondingly. Click is On/Off, Hold is dimming Up/Down. Single clicks works with group B, double click with group D."
-          },
-          "values": [
-            {
-              "id": "0",
-              "label": {
-                "en": "seperately"
-              }
-            },
-            {
-              "id": "1",
-              "label": {
-                "en": "In pair without double clicks"
-              }
-            },
-            {
-              "id": "2",
-              "label": {
-                "en": "In pair with double clicks"
-              }
-            }
-          ],
-          "type": "dropdown"
-        },
-        {
-          "id": "21",
-          "value": "1",
-          "label": {
-            "en": "Send the following Switch All commands "
-          },
-          "values": [
-            {
-              "id": "1",
-              "label": {
-                "en": "Switch off only"
-              }
-            },
-            {
-              "id": "2",
-              "label": {
-                "en": "Switch on only"
-              }
-            },
-            {
-              "id": "255",
-              "label": {
-                "en": "Switch all on and off"
-              }
-            }
-          ],
-          "type": "dropdown"
-        },
-        {
-          "id": "22",
-          "value": "0",
-          "label": {
-            "en": "Invert buttons"
-          },
-          "values": [
-            {
-              "id": "0",
-              "label": {
-                "en": "No"
-              }
-            },
-            {
-              "id": "1",
-              "label": {
-                "en": "Yes"
-              }
-            }
-          ],
-          "type": "dropdown"
-        },
-        {
-          "id": "25",
-          "value": "1",
-          "label": {
-            "en": "Blocks wakeup even when wakeup interval is set"
-          },
-          "values": [
-            {
-              "id": "0",
-              "label": {
-                "en": "Wakeup is blocked"
-              }
-            },
-            {
-              "id": "1",
-              "label": {
-                "en": "Wakeup is not blocked"
-              }
-            }
-          ],
-          "type": "dropdown"
-        },
-        {
-          "id": "30",
-          "value": "0",
-          "label": {
-            "en": "Send unsolicited Battery Report on Wake Up"
-          },
-          "values": [
-            {
-              "id": "0",
-              "label": {
-                "en": "No"
-              }
-            },
-            {
-              "id": "1",
-              "label": {
-                "en": "To same node as wake up notification"
-              }
-            },
-            {
-              "id": "2",
-              "label": {
-                "en": "Broadcast"
-              }
-            }
-          ],
-          "type": "dropdown"
-        }
-      ]
-    },
     {
       "id": "014G0801",
       "name": {
