--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This app adds support for Devolo devices in Homey",
   "main": "app.js",
   "dependencies": {
-    "homey-meshdriver": "^1.2.32",
+    "homey-meshdriver": "^1.2.33",
     "homey-zwavedriver": "git+https://github.com/athombv/node-homey-zwavedriver.git"
   },
   "devDependencies": {},
@@ -14,9 +14,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bramoosterhuis/com.devolo.git"
+    "url": "git+https://github.com/athombv/com.devolo.git"
   },
   "author": "",
   "license": "ISC",
-  "homepage": "https://github.com/bramoosterhuis/com.devolo#readme"
+  "homepage": "https://github.com/athombv/com.devolo#readme"
 }
