--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "This app adds support for Devolo devices in Homey",
   "main": "app.js",
   "dependencies": {
-    "homey-meshdriver": "^1.2.33",
-    "homey-zwavedriver": "git+https://github.com/athombv/node-homey-zwavedriver.git"
+    "homey-meshdriver": "^1.2.33"
   },
   "devDependencies": {},
   "scripts": {
